# capestone

./: .env.example  .gitignore  Procfile  pyproject.toml  railway.json  requirements.txt
app/: streamlit_app.py
core/: __init__.py
core/llm/: __init__.py  gemini.py
core/mcp/: __init__.py  hitl.py
core/pulse/: __init__.py  generate.py  load.py
core/rag/: __init__.py  retrieve.py  smartsync.py
core/stt/: __init__.py  elevenlabs.py
core/tts/: __init__.py  elevenlabs.py
core/voice/: __init__.py  booking.py
data/: schemes.json
data/knowledge/: source_urls.json
data/reviews/: reviews_2026-04-25.csv  reviews_2026-04-25.json  sample_reviews.csv
data/state/: fee_explainers.json
docs/: ARCHITECTURE.md  EVALS_REPORT.md  SOURCE_MANIFEST.md  edgecase.md  evals.md  mcpintegration.md  rag.md  rules.md  themeclassification.md  voiceagent.md
evals/: adversarial_prompts.jsonl  golden_questions.jsonl  ux_checks.json
phase_1/: README.md  run_ingest.py  run_query.py
phase_2/: README.md  fetch_reviews.py  run_pulse.py
phase_3/: README.md  run_smartsync.py
phase_4/: README.md  run_booking_cli.py
phase_5/: README.md  run_hitl_cli.py
phase_6/: README.md  run_evals.py
scripts/: phase1_ingest_schemes.py  phase1_query_cli.py  phase2_generate_pulse.py  phase6_run_evals.py
tests/: conftest.py
tests/phase_1/: test_retrieval.py
tests/phase_2/: test_pulse_constraints.py
tests/phase_3/: test_smartsync_exit_load.py
tests/phase_4/: test_booking_theme_and_persistence.py
tests/phase_5/: test_hitl_actions.py
tests/phase_6/: test_eval_files_exist.py
(+12 files in other folders)
